src/test/ui/higher-rank-trait-bounds/issue-59311.nll.stderr
error: higher-ranked lifetime error
  --> $DIR/issue-59311.rs:21:5
   |
LL |     v.t(|| {});
   |     ^^^^^^^^^^
   |
   = note: could not prove [closure@$DIR/issue-59311.rs:21:9: 21:14] well-formed

error: higher-ranked lifetime error
  --> $DIR/issue-59311.rs:21:9
   |
LL |     v.t(|| {});
   |         ^^^^^
   |
   = note: could not prove for<'a> &'a V: 'static

error: aborting due to 2 previous errors

